# BreakoutTrading

./: .env.example  .gitignore  README.md  pyproject.toml
config/: settings.yaml
docs/: breakout_strategy_design.md
notebooks/: 01_backtest_explorer.ipynb  02_point_in_time_check.ipynb
src/breakout/: __init__.py  cli.py  config.py  synthetic.py
src/breakout/backtest/: __init__.py  engine.py  metrics.py
src/breakout/data/: __init__.py  adjust.py  alpaca.py  base.py  loader.py  schwab.py  store.py
src/breakout/indicators/: __init__.py  core.py
src/breakout/news/: __init__.py  attention.py  catalyst_llm.py  theme_graph.py
src/breakout/screen/: __init__.py  funnel.py  l0_universe.py  l1_regime.py  l2_trend.py  l3_setup.py  l4_trigger.py  l5_group.py  l6_catalyst.py  l7_compose.py  types.py
tests/: test_backtest_engine.py  test_backtest_metrics.py  test_funnel.py  test_indicators.py
